Front-end almost finished

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
 
 {% block main_layout %}
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 content-column">
+    <div class="home-grid">
+        <div class="content-column">
             <h1 class="launch-coders-title">Launch Coders</h1>
             <p class="description-text">
                 Description & Instructions. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam congue sit amet lacus eget interdum. Nam porta blandit efficitur. Maecenas sollicitudin ac est et porta.
@@ -22,9 +22,7 @@
                 </div>
             </button>
         </div>
-        <div class="col-md-6">
-            <img src="../static/images/background_image.avif" alt="Background Image" class="background-image">
-        </div>
+        <img src="../static/images/background_image.avif" alt="Background Image" class="background-image">
     </div>
 </div>
 <img src="../static/images/curves.png" alt="Curves" class="curve-image">
