--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -131,20 +131,180 @@ body {
     width: 60px;
     height: auto;
 }
-
 .background-image {
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: 50%;
+
+    height: 100%;
     object-fit: cover;
-    border-top-right-radius: 50px; 
-    border-bottom-right-radius: 50px;
+    border-top-left-radius: 50px; 
+    border-bottom-left-radius: 50px;
 }
 
 .content-column {
     position: relative;
     margin-left: 10px; 
     margin-left: -6.5rem;
+    overflow-wrap: break-word;
 }
+
+.calendar-container {
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px;
+}
+
+.calendar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.calendar-table {
+    margin-top: 10px;
+}
+
+.calendar-column {
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px;
+}
+
+.add-event-column {
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px;
+}
+.add-event-title,
+.calendar-header h3,
+label {
+    font-weight: bold;
+}
+.add-event-input {
+    background-color: #224957;
+    color: white;
+    border-radius: 25px;
+    border: none;
+    padding-left: 20px;
+    flex-grow: 1;
+}
+
+.add-event-input::placeholder {
+    color: white;
+    opacity: 1;
+}
+
+.add-event-input:focus {
+    background-color: #224957;
+    box-shadow: none;
+    border-color: transparent;
+}
+.submit-button {
+    background-color: #20DF7F;
+    color: #224957;
+    border-radius: 25px;
+    border: none;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.row {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.content-row {
+    margin-bottom: 30px;
+}
+
+.calendar-container,
+.add-event-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.input-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.label {
+    margin-right: 10px;
+}
+
+.home-button {
+    position: fixed;
+    bottom: 15px;
+    left: 15px;
+    background-color: white;
+    color: #000000;
+    border-radius: 50%;
+    width: 120px; 
+    height: 120px; 
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    z-index: 10;
+    padding: 10px 20px;
+}
+
+.add-event-container {
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-group {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.label {
+    margin-right: 10px;
+}
+
+@media (max-width: 992px) {
+    .background-image {
+        width: 100%;
+        border-radius: 0;
+        height: 50vh;
+    }
+
+    .content-column {
+        margin-left: 0;
+        padding: 0 20px;
+    }
+}
+
+
+/* Custom CSS for home.html */
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 1rem;
+}
+
+.image-column {
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 767px) {
+    .home-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
