--- a/templates/login.html
+++ b/templates/login.html
@@ -15,14 +15,16 @@
         <h1 class="header">Sign In</h1>
         <p class="subheader">Welcome back!</p>
         <form>
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" placeholder="Username">
+          <div class="input-container">
+              <label for="event-date">Date:</label>
+              <input type="text" id="event-date" class="form-control add-event-input" placeholder="MM/DD/YYYY">
           </div>
-          <div class="mb-3">
-            <input type="password" class="form-control custom-input" placeholder="Password">
+          <div class="input-container">
+              <label for="event-name">Name:</label>
+              <input type="text" id="event-name" class="form-control add-event-input" placeholder="Enter event name here">
           </div>
-          <button type="submit" class="btn custom-button">Login</button>
-        </form>
+          <button type="submit" class="btn submit-button">Submit</button>
+      </form>
       </div>
       <div class="col-md-6 signup-column">
         <h1 class="header">Sign Up</h1>
