--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,13 +1,4 @@
-body {
-    background-color: #F0F0F0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0;
-    min-height: 90vh;
-}
-
+/* General styles */
 .main-wrapper {
     display: flex;
     align-items: center;
@@ -19,6 +10,14 @@ body {
     max-width: 1000px;
 }
 
+.curve-image {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+}
+/* Header styles */
 .header {
     color: #224957;
     font-size: 3.5rem;
@@ -33,6 +32,7 @@ body {
     margin-left: 10px; 
 }
 
+/* Input styles */
 .custom-input {
     background-color: #224957;
     color: white;
@@ -52,33 +52,13 @@ body {
     border-color: transparent;
 }
 
+/* Button styles */
 .custom-button {
     background-color: #20DF7F;
     color: #224957;
     border-radius: 25px;
     border: none;
     width: 100%;
-}
-
-.curve-image {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
-}
-
-.launch-coders-title {
-    color: #224957;
-    font-size: 4rem;
-    margin-top: 30px;
-    margin-bottom: 10px;
-}
-
-.description-text {
-    color: #000000;
-    font-size: 1.2rem;
-    margin-bottom: 20px;
 }
 
 .buttons {
@@ -122,6 +102,202 @@ body {
     padding: 10px 20px; 
 }
 
+.submit-button {
+    background-color: #20DF7F;
+    color: #224957;
+    border-radius: 25px;
+    border: none;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.logout-button {
+    border: 2px solid black;
+    color: black;
+}
+
+.home-button {
+    position: fixed;
+    bottom: 15px;
+    left: 15px;
+    background-color: white;
+    color: #000000;
+    border-radius: 50%;
+    width: 120px; 
+    height: 120px; 
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    z-index: 10;
+    padding: 10px 20px;
+}
+
+.btn-danger.submit-button {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    color: white;
+}
+/* Calendar styles */
+.calendar-container {
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px;
+}
+
+
+.calendar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.space-between-forms {
+    margin-top: 20px;
+}
+
+.calendar-table {
+    margin-top: 10px;
+}
+
+.calendar-column {
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px;
+}
+
+/* Add Event styles */
+.add-event-column {
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px;
+}
+
+.add-event-input {
+    background-color: #224957;
+    color: white;
+    border-radius: 25px;
+    border: none;
+    padding-left: 20px;
+    flex-grow: 1;
+}
+
+.add-event-input::placeholder {
+    color: white;
+    opacity: 1;
+}
+
+.add-event-input:focus {
+    color: white;
+    background-color: #224957;
+    box-shadow: none;
+    border-color: transparent;
+}
+
+.add-event-title,
+.calendar-header h3,
+label {
+    font-weight: bold;
+}
+
+/* Layout styles */
+.row {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.content-row {
+    margin-bottom: 30px;
+}
+
+.add-event-container {
+    background-color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.calendar-container,
+.add-event-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.input-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.label {
+    margin-right: 10px;
+}
+
+.form-group {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.form-control.custom-input {
+    color: white;
+}
+/* Media queries */
+@media (max-width: 767px) {
+    .home-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 992px) {
+    .background-image {
+        width: 100%;
+        border-radius: 0;
+        height: 50vh;
+    }
+
+    .content-column {
+        margin-left: 0;
+        padding: 0 20px;
+    }
+}
+
+/* Home page specific styles */
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 1rem;
+}
+
+.image-column {
+    display: flex;
+    justify-content: center;
+}
+
+.launch-coders-title {
+    color: #224957;
+    font-size: 4rem;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.description-text {
+    color: #000000;
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
+
 .rocket-text-container {
     position: relative;
     top: 7px;
@@ -145,166 +321,14 @@ body {
     margin-left: -6.5rem;
     overflow-wrap: break-word;
 }
+/* Body */
 
-.calendar-container {
-    background-color: white;
-    border-radius: 25px;
-    padding: 20px;
-    margin: 10px;
-}
-
-.calendar-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.calendar-table {
-    margin-top: 10px;
-}
-
-.calendar-column {
-    background-color: white;
-    border-radius: 25px;
-    padding: 20px;
-    margin: 10px;
-}
-
-.add-event-column {
-    background-color: white;
-    border-radius: 25px;
-    padding: 20px;
-    margin: 10px;
-}
-.add-event-title,
-.calendar-header h3,
-label {
-    font-weight: bold;
-}
-.add-event-input {
-    background-color: #224957;
-    color: white;
-    border-radius: 25px;
-    border: none;
-    padding-left: 20px;
-    flex-grow: 1;
-}
-
-.add-event-input::placeholder {
-    color: white;
-    opacity: 1;
-}
-
-.add-event-input:focus {
-    background-color: #224957;
-    box-shadow: none;
-    border-color: transparent;
-}
-.submit-button {
-    background-color: #20DF7F;
-    color: #224957;
-    border-radius: 25px;
-    border: none;
-    width: 100%;
-    margin-top: 20px;
-}
-
-.row {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    align-items: center;
-}
-.content-row {
-    margin-bottom: 30px;
-}
-
-.calendar-container,
-.add-event-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-.input-container {
+body {
+    background-color: #F0F0F0;
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
-}
-
-.label {
-    margin-right: 10px;
-}
-
-.home-button {
-    position: fixed;
-    bottom: 15px;
-    left: 15px;
-    background-color: white;
-    color: #000000;
-    border-radius: 50%;
-    width: 120px; 
-    height: 120px; 
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
-    z-index: 10;
-    padding: 10px 20px;
-}
-
-.add-event-container {
-    background-color: white;
-    border-radius: 25px;
-    padding: 20px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.form-group {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.label {
-    margin-right: 10px;
-}
-
-@media (max-width: 992px) {
-    .background-image {
-        width: 100%;
-        border-radius: 0;
-        height: 50vh;
-    }
-
-    .content-column {
-        margin-left: 0;
-        padding: 0 20px;
-    }
-}
-
-
-/* Custom CSS for home.html */
-.home-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    gap: 1rem;
-}
-
-.image-column {
-    display: flex;
     justify-content: center;
+    min-height: 100vh;
+    margin: 0;
+    min-height: 90vh;
 }
-
-@media (max-width: 767px) {
-    .home-grid {
-        grid-template-columns: 1fr;
-    }
-}
-
