--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -79,6 +79,7 @@
 <!-- Background curves image -->
 <img src="../static/images/curves.png" alt="Curves" class="curve-image">
 <script>
+    //This script was created with usage of ChatGPT
     // Calendar object to store current month and year
     const calendar = {
         month: new Date().getMonth(),
@@ -221,6 +222,4 @@
     // Display initial calendar
     showCalendar();
 </script>
-
-
 {% endblock %}
