--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,7 @@
       </div>
     </div>
   </div>
-  <!-- Curves image -->
+  <!-- Curve image -->
   <img src="../static/images/curves.png" alt="Curves" class="curve-image">
   {% endblock %}
   
